Fixed nav max width

--- a/code/style.css
+++ b/code/style.css
@@ -29,6 +29,8 @@ h3 {
   flex-wrap: wrap;
   flex-direction: column;
   margin-top: 10px;
+  max-width: 1220px;
+  margin: 0 auto;
 }
 
 .nav-container .logo {
