--- a/code/style.css
+++ b/code/style.css
@@ -57,12 +57,12 @@ input:not(:checked) ~ #dropdown-menu {
 
 #menu-label {
   float: right;
-  margin-right: 1rem;
 }
 
 .fa-bars {
   color: rgba(238, 207, 207);
   font-size: 2rem;
+  margin-top: 1rem;
 }
 
 .hamburger-nav-mobile ul {
