--- a/code/style.css
+++ b/code/style.css
@@ -63,6 +63,8 @@ input:not(:checked) ~ #dropdown-menu {
   color: rgba(238, 207, 207);
   font-size: 2rem;
   margin-top: 1rem;
+  position: absolute;
+  right: 1.5rem;
 }
 
 .hamburger-nav-mobile ul {
