--- a/code/style.css
+++ b/code/style.css
@@ -5,35 +5,36 @@ body {
   font-family: 'Roboto', sans-serif;
   background: #D8F3DC;
   margin: 0;
-  height: 100vh;
+  padding: 0;
 }
 
 .container{
-display: flex;
-flex-direction: column; 
+display:flex;
+flex-direction:column;
 }
 
 /* styling of header */
-header {
-  width: auto;
-  min-height: 20vh;
-  background-color: #DBEAD7;
+.header {
+  width: 100%;
+  max-height: 40%;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction:column;
+  background-color: #DBEAD7;
 }
 
 .newssite-name{
-  display:flex; 
+  margin: 1rem;
+  display: flex;
+  align-self: center;
 }
 
 .logo {
-  margin: 0.5rem;
   max-height: 12vh;
 }
 
 .newssite-name h1{
   color: white;
+  padding: 1rem;
   font-size: 1.5rem;
   transition: 0.5s linear;
 }
@@ -42,45 +43,51 @@ header {
 }
 
 .navbar {
-  display:none;
+  margin-bottom: 0.5rem;
+  display:flex;
+  align-self: center;
 }
 
 .navbar li {
   list-style: none;
   display: inline-block;
-  padding: 0.8rem;
 }
 
 .navbar a {
   text-decoration: none;
-  font-size: 15px;
+  font-size: 0.6rem;
+  padding: 1rem;
   text-transform: uppercase;
-  padding: 10px;
   transition: 1s;
 }
 
 .navbar a:hover{
   background: pink;
+  color: green;
 }
 
 /* Main news for mobile*/
-
 .main-news{
   background: #B7E4C7;
+  width: 100%;
   display:grid;
-  grid-template-columns: 1fr;
 }
 
 .main-image {
-  max-width: 30rem;
-  margin: 2rem 2rem 0 2rem;
-  border-radius: 10%
+  width: auto;
+  margin: 2rem;
+  border-radius: 10%;
+}
+
+.main-text{
+  align-self: center;
 }
 
 .main-text h1{
-  font-size: 2.5rem;
-  margin: 0 2rem;
+  font-size: 1rem;
+  font-weight: bolder;
   padding: 1rem;
+  margin-left: 2rem;
 }
 
 .main-text p{
@@ -92,7 +99,6 @@ header {
 /* Other news for mobile*/
 .other-news {
   display: grid;
-  grid-template-columns: 1fr;
   gap: 0.5rem;
   margin: 1rem;
 }
@@ -101,22 +107,24 @@ header {
   background: #C1ECC7;
   display: grid;
   place-items: center;
+  padding: 1rem;
   margin: 0.5rem;
 }
 .other-news-box img{
+  object-fit: cover;
   width: 12rem;
   max-height: 12rem;
-  margin: 1rem;
-  /*align-items: center;
-  justify-items: center;*/
+  margin: 1rem; 
+  border-radius: 10%;
+  align-items: center;
+  justify-items: center;
 }
 
 .other-news-box h2{
- /*align-items: center;
- justify-items: center;*/
- padding: 1rem;
- font-size: 15px;
- 
+ align-items: center;
+ justify-items: center;
+ font-size: 1.2rem; 
+ margin: 1rem;
 }
 
 /*Footer*/
@@ -130,50 +138,53 @@ footer {
 }
 
 footer a{
+font-size: 15px;
 text-decoration: none;
+background: #fff;
 border: 1px solid black;
-padding: 3px;
+padding: 10px;
 }
 
 /*Media for tablet*/
 @media screen and (min-width:768px){
 
-  header{
+  .header{
     display:flex;
-    justify-content: center;
-    align-content: center;
+    flex-direction: row;
+    justify-content: space-around;
   }
 
   .newssite-name{
-    align-self: center;
+    font-size: 2rem;
   }
 
   .navbar{
     display: inline;
   }
 
+  .navbar a{
+    font-size: 1rem;
+  }
+
   .main-news{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 15px;
     place-items: center;
   }
 
   .main-image{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    margin: 2rem;
+    grid-column: 1 / 2;
   }
 
   .main-text h1{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    font-size: 1.5rem;
-    margin: 1rem 1rem 0 1rem;
+   grid-column: 2 / 3;
+   font-size: 1rem;
+   margin: 1rem 1rem 0 1rem;
   }
 
   .main-news p{
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 2 / 3;
     font-size: 0.8rem;
     margin: 0 1rem 1rem 1rem;
     
@@ -199,10 +210,20 @@ padding: 3px;
   body{
     background-color: #B5D6B2;
   }
+
+  .header{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .navbar a{
+    font-size: 1.2rem;
+  }
+
 .main-news{
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(autofit, minmax(80%, 1fr));
 }
 
   .other-news {
