updated google font style

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
     text-transform: capitalize;
     list-style: none;
     text-decoration: none;
-    font-family: "Apex new";
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     transition: all .3s cubic-bezier(.16,.8,.62,1.52);
 }
 
