--- a/code/style.css
+++ b/code/style.css
@@ -16,15 +16,17 @@
 
   
   header {
-    width:  100%;
-    border: 10px solid rgb(79, 126, 128);
+    box-sizing: border-box;
     display:flex;
     flex-direction: row;
     flex-wrap: space-between;
     justify-content: flex-start;
-    -webkit-border-radius: 15px 15px 0 0;
+    width:  100%;
+    height: auto;
+    border: 10px solid rgb(79, 126, 128);
+    border-radius: 15px 15px 0 0;
     background-color: rgb(79, 126, 128);
-    margin: 40px 60px 0 60px;
+    margin: 0;
     padding: 20px;
     overflow: hidden;
     height: 140px;
@@ -41,23 +43,22 @@
   
   .logo-img {
     align-self: center;
-    width: 80%;
+    width: 70%;
     height: auto;
-    -ms-flex-align: start;
-    flex-shrink: 0;
+   
   }
 
   .head-site {
     font-family: 'Righteous', cursive;
-    
+    margin: 0 0 50px 0;
+    padding: 0 0 50px 0;
+
   }
 
   h1 {
     font-family: 'Righteous', cursive;
-    font-size: 400%;
+    font-size: 300%;
     color: rgb(190, 229, 255);
-    margin-bottom: 0;
-    padding-top: 0;
   }
 
   .kids-ed {
@@ -73,16 +74,16 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     width: 40%;
-    height: 20%;
+    height: 30%;
     background-color: rgb(19, 19, 31);
-    -webkit-border-radius: 15px;
+    border-radius: 15px;
     justify-content: space-evenly;
     
   }
 
   .nav-links {
     font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 100%;
+    font-size: 70%;
     padding: 0 30px 0 30px;
     align-self: center;
   
@@ -97,19 +98,17 @@
     text-decoration: none;
     
   }
+
   
   a.small-link {
     color: white;
     text-align: center;
-  
   }
-  
-  a.big-link {
-    color:black;
-    /* vertical-align: top; */
-    
+
+  img:hover {
+    filter: invert;
   }
-  
+
   a:hover {
     color: purple;
   }
@@ -120,49 +119,51 @@
 
   
   .big-news-container{
+    box-sizing: border-box;
     width: 100%;
     display:flex;
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    /* align-content: center; */
-    /* justify-content: space-evenly; */
     border: 10px solid black;
     background-color: rgba(255, 255, 0, 0.651);
-    margin:0 60px 0 60px;
     padding: 10x 0 10px 0;
  
   }
 
   .big-item1 {
     display: flex;
-    justify-content: center;
-    margin: 20px 60px 0 40px;
+    align-items: center;
+    margin: 0 60px 0 40px;
   }
 
   h3 { 
     margin: 20px 0 0 10px;
-    padding: 0;
+    padding: 40px;
     font-size: 70%;
     color: rgb(4, 6, 8);
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: bolder;
-    /* border: 2px solid red; */
     font-size: 100px;
   }
 
   .big-item2 {
-    display: flex;
-    justify-content: flex-end;
-    margin: 10px 40px 10px 0;
+    width: 100%;
+    height: auto;
+    margin: 50px 40px 10px 0;
+    filter: drop-shadow(5px 5px rgb(124, 19, 101));
+  }
+
+  .big-image:hover {
+    filter: invert(100%);
+    transition: 0.5s ease-in-out;
+    
   }
 
   .big-image {
-    width: 80%;
+    width: 100%;
     height: auto;
     border-radius: 10%;
-    filter: drop-shadow(5px 5px rgb(0, 168, 118));
-    overflow: hidden;
   }
 
 
@@ -171,49 +172,52 @@
 
   
   .small-news-container {
-    width: 100%;
-    border: 10px solid rgb(21, 21, 54);
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: space-evenly;
     background-color: rgb(21, 21, 54);
-    margin: 0 60px 0 60px;
+    border: 10px solid rgb(21, 21, 54);
     padding: 10px;
-    height: 1000px;
-    -webkit-border-radius: 0 0 15px 15px;
+    border-radius: 0 0 15px 15px;
    
   
   }
   
   .news1, .news2, .news3, .news4, .news5, .news6 {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 10px 40px 40px 10px;
-    height: 250px;
-    width: auto;
-    justify-content: center;
-    }
-  
-  
-  /* .news4, .news5, .news6 {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    object-fit: fill;
-    padding: 0;
-    margin: 20px;
-    height: 250px;
     width: 300px;
-  } */
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 10px 30px 30px 10px;
+    }
+
+
+    .news1:hover, .news2:hover, .news3:hover {
+      filter:  invert(100%);
+      transition: 0.5s ease-in-out;
+  
+    }
+
+    .news4:hover, .news5:hover, .news6:hover {
+      transition: 0.5s ease-in-out;
+      transform: scale(1.2, 1.2);
+
+      
+    }
+
+
  
   p {
     font-family: 'Montserrat Alternates', sans-serif;
   }
   
   .small-img{
-    width: 300px;
-    height: 250px;
+    width: 100%;
+    height: 80%;
+    overflow: hidden;
     border-radius: 10%;
     border: 1px solid black;
     filter: drop-shadow(5px 5px rgb(29, 106, 150));
@@ -221,17 +225,18 @@
   
   
   footer {
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
-    margin: 0 0 60px 60px;
+    margin: 0 0 0 25px;
+   
   
   }
   
   .footer-list {
-    margin: 0 0 0 0x;
     padding: 20px 0 20px 0;
     font-size: 100%;
     color: rgb(199, 195, 136);
@@ -254,18 +259,18 @@
 
   
     h1 {
-      font-size: 250%;
-      margin: 45px 0 0 25px;
+      font-size: 200%;
+      margin: 20px 0 0 10px;
     }
    
     .nav-bar {
      flex-direction: row;
-     flex-wrap: wrap;
-     justify-content: flex-start;
+     flex-wrap: nowrap;
+     justify-content: space-evenly;
      align-items: ;
      padding: 10px;
-     height: 100%;
-     width: 10%;
+     height: auto;
+     width: 40%;
      
    }
    
@@ -283,28 +288,25 @@
 
    /* --------big news section--------- */
    
-    .big-news-container {
-      
+    .big-news-container { 
        flex-direction: row;
        justify-content: space-evenly;
-       
-      
-       
+
      }
+
+     
      .big-item1 { 
        margin: 0 0 0 80px;
        padding: 0;
-       text-align: center;
-       box-sizing: content-box;
        width: 0;
+       align-items: center;
      } 
    
      h3 {
-
-       font-size: 300%;
+       font-size: 410%;
        text-align: center;
        margin: 0;
-       padding: 20px 0 0 20px;
+       padding: 0 0 0 20px;
   
      }
   
@@ -312,6 +314,7 @@
        width: 50%;
        height: auto;
        margin: 0 0 0 100px;
+       filter: drop-shadow(5px 5px rgb(124, 19, 101));
        padding: 10px;
        
      }
@@ -321,28 +324,26 @@
        height: auto;
        margin-left: 40px;
        border: 1px solid rgb(124, 19, 101);
-       filter: drop-shadow(5px 5px rgb(124, 19, 101));
        overflow: hidden;
      }
 
      /* -------small news section--------- */
    
-     .small-news-container {
-      
-       padding: 0 0 0 90px;
-       flex-wrap: wrap;
-       height: 100%;
+     .small-news-container { 
+        padding: 0 0 0 90px;
+        flex-wrap: wrap;
+        height: 100%;
      }
 
      .news1, .news2, .news3, .news4, .news5, .news6 {
-
-      width: 40%;
-      height: auto;
+        width: 40%;
+        height: auto;
      }
 
      .small-img {
-       width: 100%;
-       height: auto;
+        width: 100%;
+        height: 80%;
+        overflow: hidden;
      }
   
       }
@@ -356,7 +357,7 @@
 
 
     header {
-      width: 90%;
+      /* width: 90%; */
       flex-wrap: nowrap;
       align-content: center;
     }
@@ -368,22 +369,11 @@
     }
 
 
-  .head-site {
-    width: 40%;
-    height: auto;
-    margin: 0 0 20px 20px;
-   
-  }
-
-
     .logo-img {
       width: 80%;
       height: auto;
     }
    
-    /* h1 {
-      height: %;
-    } */
 
     .nav-bar {
       background: rgb(47, 10, 68);
@@ -398,57 +388,59 @@
       
     }
 
-    .nav-links {
-      
+    .nav-links {    
       font-size: 18%;
       padding: 0 0 10px 0;
       align-self: center;
   
     }
 
+    .head-site {
+      width: 100%;
+      height: auto;
+     
+    }
+
     h1 {
-      font-size: 180%;
-      padding: 20px 30px 0 0;
-      margin: 0 0 0 0;
+      font-size: 140%;
+      margin-bottom: 0;
     }
 
     .kids-ed {
-      font-size: 40%;
+      font-size: 70%;
       margin-top: 0;
-     
     }
 
      /*  -------big news section------- */
 
     .big-news-container {
-      width: 100%;
+      text-align: center;
       flex-wrap: wrap-reverse;
-      /* flex-direction: row; */
-   
     }
 
     .big-item1 {
-      height: 100%;
-      margin: 0 0 20px 0;
+      width: auto;
+      margin: 0;
+      padding: 0;
+  
   
     }
 
-    h3 {
-      font-size: 130%;
-      text-align: center;
+    h3 {  
+      font-size: 200%;
+      margin: 10px 0 10px 0;
+      padding: 0;
       
     }
 
     .big-item2 {
-      margin: 10px;
+      margin: 10px 10px 0 10px;
       width: 100%;
       height: auto;
-      /* border: 2px solid red; */
       border-radius: 10%;
       filter: drop-shadow(5px 5px rgb(124, 19, 101));
       overflow: hidden;
-      
-      
+  
     }
 
     .big-image {
@@ -462,46 +454,34 @@
    /* -----------small news section------- */
 
     .small-news-container {
-      width: 100%;
       flex-wrap: wrap;
       justify-content: center;
       overflow: hidden;
-      height: 100%;
-      padding: 0;
-     
-    }
+      
+       }
   
 
     .news1, .news2, .news3, .news4, .news5, .news6 {
-      
+      width: 100%;
+      height: auto;
       margin: 20px;
       justify-content: space-evenly;
-    
-      
-    }
-    .small-img {
-      width: 75%;
-      height: auto;
-      
+   
     }
 
-    .footer {
-    justify-content:space-evenly;
+    
+    .small-img {
+      width: 100%;
+      height: 80%;
+      
     }
 
     .footer-list {
       color: chocolate;
       font-size: 60%;
       margin: 0 60px 0 0;
+
     }
 
-    .one {
-      margin: 0 0 0 80px;
-    }
-
-    .two {
-      margin: 0 50px 0 50px;
-    }
-  
   }
 
